--- a/app/App.css
+++ b/app/App.css
@@ -1,7 +1,7 @@
 .app {
-  background-color: green;
+/*  background-color: green;
   height: 50px;
-  border: 1px solid blue;
+  border: 1px solid blue;*/
 }
 
 .bap {
