refactor buttons on welcome page

--- a/app/welcome.css
+++ b/app/welcome.css
@@ -1,10 +1,10 @@
-.signin_button {
+.login_button {
   width: 320px;
   margin-bottom: 20px;
   background-color: #30393C;
 }
 
-.login_button {
+.signup_button {
   width: 320px;
   margin-bottom: 20px;
   background-color: #435358;
