change genre_selector from dropdown to buttons; make start button disappear after pressing

--- a/app/App.css
+++ b/app/App.css
@@ -2,8 +2,13 @@
   height: 200px;
 }
 
-.bap {
-  background-color: red;
-  height: 25px;
+.background {
+  /*background-color: #222;*/
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+}
