make visualizer disappear when game over; fix bug that screws up further game play if you attempt to back-arrow out of game component

--- a/app/genre_selector.css
+++ b/app/genre_selector.css
@@ -1,6 +1,10 @@
 .genre_selector {
   /*background-color: #222;*/
-  height: 1200px;
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  height: 600px;
 }
 
 
