--- a/app/css/scoreboard.css
+++ b/app/css/scoreboard.css
@@ -1,3 +1,80 @@
 .scoreboard {
+  color: grey;
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-flex-wrap: wrap; /* Safari */
+  flex-wrap:         wrap;
+  -webkit-align-items: stretch; /* Safari */
+  align-items:         stretch;
+  margin-bottom: 40px;
+}
 
+.center {
+	text-align: center;
+}
+
+.centerHeading {
+  text-align: center;
+  border-bottom-style: solid;
+}
+
+.right {  
+  text-align: right;
+}
+
+.score {
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex: 1 1 100px;
+  flex: 1 1 100px;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: #000000;
+  font-size: 30px;
+}
+
+.highScorers {
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex: 1 1 100px;
+  flex: 1 1 100px;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: #efeee1;
+  -webkit-align-items: stretch; /* Safari */
+  align-items:         stretch;
+}
+
+.highScorersList {
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: wrap; /* Safari */
+  flex-wrap:         wrap;
+  -webkit-flex: 1 1 100px;
+  flex: 1 1 100px;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  background-color: #efeee1;
+  -webkit-align-content: center; /* Safari */
+  align-content:         center;
+}
+
+.tableWidth {
+	width: 200px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+@media screen and (max-width: 1000px) {
+    .highScorers { display:none }
 }
