--- a/app/css/genre_selector.css
+++ b/app/css/genre_selector.css
@@ -4,11 +4,9 @@
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
-  height: 600px;
+  height: 90vh;
   -webkit-justify-content: center;
   justify-content: center;
-/*  -webkit-justify-content: space-between;
-  justify-content: space-between;*/
 }
 
 
