--- a/app/css/visualizer.css
+++ b/app/css/visualizer.css
@@ -1,5 +1,17 @@
 .visualizer {
-  margin-top: 35px;
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.svg-content {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .hidden {
