refactor musicPlayerGroup component; make high_scorer panel appear at end of game only; refactor logo_drop d3 component

--- a/app/css/music_player_group.css
+++ b/app/css/music_player_group.css
@@ -12,3 +12,16 @@
 
 .show {
 }
+
+.start_button {
+  /*background-color: #222;*/
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  height: 50vh;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center; /* Safari */
+  align-items:         center;
+}
