--- a/app/css/song_panel.css
+++ b/app/css/song_panel.css
@@ -1,9 +1,21 @@
 .songPanel {
-  height: 150px;
+  height: 100px;
   border-style: solid;
   border-radius: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: #493d54;
   text-align: center;
+}
+
+@media screen and (max-width: 1000px) {
+  .songPanel {
+  	height: 150px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .songPanel {
+  	height: 200px;
+  }
 }
