add loader component and loader css

--- a/app/css/music_player_group.css
+++ b/app/css/music_player_group.css
@@ -25,3 +25,9 @@
   -webkit-align-items: center; /* Safari */
   align-items:         center;
 }
+
+.loader_message {
+  color: white;
+  font-size: 24px;
+  margin-bottom: 12px;
+}
