--- a/app/css/scoreboard.css
+++ b/app/css/scoreboard.css
@@ -1,5 +1,4 @@
 .scoreboard {
-  color: grey;
   display: -webkit-flex; /* Safari */
   display: flex;
   -webkit-flex-direction: row;
@@ -11,6 +10,7 @@
   -webkit-align-items: stretch; /* Safari */
   align-items:         stretch;
   margin-bottom: 40px;
+  height: 180px;
 }
 
 .center {
@@ -19,7 +19,7 @@
 
 .centerHeading {
   text-align: center;
-  border-bottom-style: solid;
+  height: 30px;
 }
 
 .right {  
@@ -35,12 +35,12 @@
   flex: 1 1 100px;
   -webkit-justify-content: center;
   justify-content: center;
-  background-color: #000000;
-  font-size: 30px;
-  height: 130px;
+  background-color: #d4d382;
+  font-size: 35px;
 }
 
 .highScorers {
+  font-size: 18px;
   display: -webkit-flex; /* Safari */
   display: flex;
   -webkit-flex-direction: column;
@@ -49,31 +49,39 @@
   flex: 1 1 100px;
   -webkit-justify-content: center;
   justify-content: center;
-  background-color: #efeee1;
+  background-color: #52d0da;
   -webkit-align-items: stretch; /* Safari */
   align-items:         stretch;
 }
 
 .highScorersList {
+  height: 130px;
   display: -webkit-flex; /* Safari */
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
   -webkit-flex-wrap: wrap; /* Safari */
   flex-wrap:         wrap;
-  -webkit-flex: 1 1 100px;
-  flex: 1 1 100px;
+
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
-  background-color: #efeee1;
+  background-color: #e9e6e0;
   -webkit-align-content: center; /* Safari */
   align-content:         center;
 }
 
 .tableWidth {
 	width: 200px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.column1 {
+  width: 200px;
+}
+
+.column2 {
+  width: 25px;
 }
 
 @media screen and (max-width: 1000px) {
