add heading to genre selector page and change colors of genre selector buttons

--- a/app/css/genre_selector_button.css
+++ b/app/css/genre_selector_button.css
@@ -1,7 +1,7 @@
 .genre_selector_button {
   width: 320px;
   margin-bottom: 20px;
-  background-color: #B19BAC;
+  background-color: #f3cc83;
 }
 
 
