add warning about volume above start button

--- a/app/css/music_player_group.css
+++ b/app/css/music_player_group.css
@@ -33,3 +33,9 @@
   -webkit-justify-content: center;
   justify-content: center;
 }
+
+.warning {
+  font-size: 24px;
+  color: red;
+  margin-bottom: 36px;
+}
