--- a/app/css/time_display.css
+++ b/app/css/time_display.css
@@ -1,4 +1,3 @@
-
 .countdownClock {
   display: -webkit-flex; /* Safari */
   display: flex;
@@ -22,4 +21,10 @@
   text-align: center;
   background-color: #d4d382;
   border-radius: 30px;
+}
+
+@media screen and (max-height: 1024px) {
+  .countdownClock {
+    height: 150px;
+  }
 }
