--- a/app/css/answer_bar.css
+++ b/app/css/answer_bar.css
@@ -8,3 +8,14 @@
 	font-size: 20px;
 }
 
+
+@media screen and (max-height: 1120px) {
+  .input_box {
+  	height: 50px;
+  	font-size: 15px;
+  }
+  .button {
+  	height: 50px;
+  	font-size: 15px;
+  }
+}
